--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,10 @@ android {
 }
 
 dependencies {
+    //Retrofit
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+
     // Compose
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
@@ -58,6 +62,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation "androidx.core:core-splashscreen:1.0.0-rc01"
+    implementation 'com.google.code.gson:gson:2.8.9'
 
     // Test
     testImplementation 'junit:junit:4.13.2'
