--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MainApplication"
         android:icon="@drawable/ic_git_hub"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_git_hub"
