--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation "androidx.core:core-splashscreen:1.0.0-rc01"
     implementation 'com.google.code.gson:gson:2.8.9'
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.24.11-rc"
 
     // Test
     testImplementation 'junit:junit:4.13.2'
