--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation "androidx.core:core-splashscreen:1.0.0-rc01"
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation "com.google.accompanist:accompanist-swiperefresh:0.24.11-rc"
+    implementation("io.coil-kt:coil-compose:2.1.0")
 
     // Test
     testImplementation 'junit:junit:4.13.2'
