--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,10 @@ android {
             buildConfigField("String", "GITHUB_API_URL", "\"https://api.github.com\"")
         }
     }
+
+    productFlavors.all {
+        defaultConfig.buildConfigField 'String', 'FLAVOR_' + it.name.toUpperCase(), '\"' + it.name + '\"'
+    }
 }
 
 dependencies {
